# pybg

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: auto-assign.yaml  branch.yaml  build.yml  linting.yml  release.yml  tests.yml
.itch/: description.html  itch_game_list.html  metadata.json  tagline.txt
.itch/scripts/: extract_strategy.py  fix_file_names.py  itch_assets.py  remove_lfs.sh  super_cover.py
scripts/: optimize_covers.py
src/archive/: utils.py
src/archive/scripts/: backgammon_env.py  bearoff_db_eval.py  bearoff_db_eval_patched.py  eval_board.py  play_vs_model.py  train_rl.py
src/asciigammon/: constants.py  main.py
src/asciigammon/agents/: __init__.py  factory.py  human_agent.py  random_agent.py
src/asciigammon/archive/: helpers.py  utils.py
src/asciigammon/assets/: settings.json
src/asciigammon/core/: __init__.py  bearoff_database.py  board.py  command_router.py  eval.py  font.py  gnubg_nn.py  help.py  helpers.py  logger.py  (+6 more)
src/backgammon/: __init__.py  board.py  checker_positions.py  checker_positions_2d.py  crt.py  exceptions.py  font.py  helpers.py  logger.py  main.py  match.py  math_utils.py  player.py  position.py  sandbox.py  shader.py  shell.py  sound.py  ui.py  utils.py
src/graphical_board/: cartoon_board.py  checker_positions.py  shader.py
src/oblique_games/: __init__.py  requirements.txt  ui.py
src/pybg/: constants.py  main.py  requirements.txt
src/scripts/: find_errors.py
tests/: check_audio.py  conftest.py  test_generator.py
tests/asciigammon/: test_board.py  test_match.py  test_math_utils.py  test_player.py  test_position.py
tests/fixtures/: match.json  player0.json  player1.json
(+572 files in other folders)
